# abenlux

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITIQUE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: knowledge_graph.example.yaml  principals.example.yaml
examples/agent-verification/: Dockerfile  README.md  verify_agent.sh
examples/attack-e2e/: Dockerfile  attack_driver.py  docker-compose.yml
examples/capture-modes-e2e/: capture_modes.py
examples/compression-e2e/: LINKEDIN.md  README.md  compression_e2e.py  render_cli.py  render_dashboard.py  render_screens.py  result.json
scripts/: dev.py
tests/: conftest.py  test_adapters.py  test_agent.py  test_api.py  test_attribution_semantic.py  test_audit_fixes.py  test_budget.py  test_claude_code_otel.py  test_collab_corpus.py  test_collaboration.py  test_compress.py  test_core.py  test_deep.py  test_dev_experience.py  test_diff.py  test_exhaustive.py  test_export_and_drilldown.py  test_feed_matches.py  test_forward_proxy.py  test_forwarding.py  test_gateway_headers.py  test_google_adapter.py  test_integration.py  test_intent_corpus.py  test_journey.py  test_learning.py  test_mcp.py  test_multitool.py  test_multiuser.py  test_notify.py  test_onboard_detect.py  test_otel_ingest.py  test_pricing.py  test_rbac.py  test_real_sdk.py  test_reports.py  test_route.py  test_routing_teammemory.py  test_salience.py  test_store_backends.py  (+5 more)
(+86 files in other folders)
